--- a/sudokuSOlver.ipynb
+++ b/sudokuSOlver.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,24 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "7 8 0  | 4 0 0  | 1 2 0\n",
-      "6 0 0  | 0 7 5  | 0 0 9\n",
-      "0 0 0  | 6 0 1  | 0 7 8\n",
-      "- - - - - - - - - - - - - \n",
-      "0 0 7  | 0 4 0  | 2 6 0\n",
-      "0 0 1  | 0 5 0  | 9 3 0\n",
-      "9 0 4  | 0 6 0  | 0 0 5\n",
-      "- - - - - - - - - - - - - \n",
-      "0 7 0  | 3 0 0  | 0 1 2\n",
-      "1 2 0  | 0 0 7  | 4 0 0\n",
-      "0 4 9  | 2 0 6  | 0 0 7\n"
+      "7 8 0  | 4 0 0  | 1 2 0\n6 0 0  | 0 7 5  | 0 0 9\n0 0 0  | 6 0 1  | 0 7 8\n- - - - - - - - - - - - - \n0 0 7  | 0 4 0  | 2 6 0\n0 0 1  | 0 5 0  | 9 3 0\n9 0 4  | 0 6 0  | 0 0 5\n- - - - - - - - - - - - - \n0 7 0  | 3 0 0  | 0 1 2\n1 2 0  | 0 0 7  | 4 0 0\n0 4 9  | 2 0 6  | 0 0 7\n"
      ]
     }
    ],
@@ -65,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,36 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "7 8 0  | 4 0 0  | 1 2 0\n",
-      "6 0 0  | 0 7 5  | 0 0 9\n",
-      "0 0 0  | 6 0 1  | 0 7 8\n",
-      "- - - - - - - - - - - - - \n",
-      "0 0 7  | 0 4 0  | 2 6 0\n",
-      "0 0 1  | 0 5 0  | 9 3 0\n",
-      "9 0 4  | 0 6 0  | 0 0 5\n",
-      "- - - - - - - - - - - - - \n",
-      "0 7 0  | 3 0 0  | 0 1 2\n",
-      "1 2 0  | 0 0 7  | 4 0 0\n",
-      "0 4 9  | 2 0 6  | 0 0 7\n",
-      "# # # # # # # # # # # # # # # #\n",
-      "7 8 5  | 4 3 9  | 1 2 6\n",
-      "6 1 2  | 8 7 5  | 3 4 9\n",
-      "4 9 3  | 6 2 1  | 5 7 8\n",
-      "- - - - - - - - - - - - - \n",
-      "8 5 7  | 9 4 3  | 2 6 1\n",
-      "2 6 1  | 7 5 8  | 9 3 4\n",
-      "9 3 4  | 1 6 2  | 7 8 5\n",
-      "- - - - - - - - - - - - - \n",
-      "5 7 8  | 3 9 4  | 6 1 2\n",
-      "1 2 6  | 5 8 7  | 4 9 3\n",
-      "3 4 9  | 2 1 6  | 8 5 7\n"
+      "7 8 0  | 4 0 0  | 1 2 0\n6 0 0  | 0 7 5  | 0 0 9\n0 0 0  | 6 0 1  | 0 7 8\n- - - - - - - - - - - - - \n0 0 7  | 0 4 0  | 2 6 0\n0 0 1  | 0 5 0  | 9 3 0\n9 0 4  | 0 6 0  | 0 0 5\n- - - - - - - - - - - - - \n0 7 0  | 3 0 0  | 0 1 2\n1 2 0  | 0 0 7  | 4 0 0\n0 4 9  | 2 0 6  | 0 0 7\n\n# # # # # # # # # # # # # # # #\n\n7 8 5  | 4 3 9  | 1 2 6\n6 1 2  | 8 7 5  | 3 4 9\n4 9 3  | 6 2 1  | 5 7 8\n- - - - - - - - - - - - - \n8 5 7  | 9 4 3  | 2 6 1\n2 6 1  | 7 5 8  | 9 3 4\n9 3 4  | 1 6 2  | 7 8 5\n- - - - - - - - - - - - - \n5 7 8  | 3 9 4  | 6 1 2\n1 2 6  | 5 8 7  | 4 9 3\n3 4 9  | 2 1 6  | 8 5 7\n"
      ]
     }
    ],
@@ -179,7 +147,7 @@
     "print_board(board)\n",
     "solve(board)\n",
     "\n",
-    "print(\"# # # # # # # # # # # # # # # #\")\n",
+    "print(\"\\n# # # # # # # # # # # # # # # #\\n\")\n",
     "print_board(board)"
    ]
   },
@@ -193,9 +161,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python376jvsc74a57bd0e195ad74c1f1f25b431fdad758182e5c1b96f087f382f48f0b05b5503f70a0ae",
+   "display_name": "Python 3.7.6 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -207,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
