--- a/sudokuSOlver.ipynb
+++ b/sudokuSOlver.ipynb
@@ -147,8 +147,10 @@
     "print_board(board)\n",
     "solve(board)\n",
     "\n",
-    "print(\"\\n# # # # # # # # # # # # # # # #\\n\")\n",
-    "print_board(board)"
+    "print(\"\\n# # # # # # # # # # # # # # # #\\nSolution:\\n\")\n",
+    "print_board(board)\n",
+    "\n",
+    "print"
    ]
   },
   {
