--- a/sudokuSOlver.ipynb
+++ b/sudokuSOlver.ipynb
@@ -131,15 +131,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "7 8 0  | 4 0 0  | 1 2 0\n6 0 0  | 0 7 5  | 0 0 9\n0 0 0  | 6 0 1  | 0 7 8\n- - - - - - - - - - - - - \n0 0 7  | 0 4 0  | 2 6 0\n0 0 1  | 0 5 0  | 9 3 0\n9 0 4  | 0 6 0  | 0 0 5\n- - - - - - - - - - - - - \n0 7 0  | 3 0 0  | 0 1 2\n1 2 0  | 0 0 7  | 4 0 0\n0 4 9  | 2 0 6  | 0 0 7\n\n# # # # # # # # # # # # # # # #\n\n7 8 5  | 4 3 9  | 1 2 6\n6 1 2  | 8 7 5  | 3 4 9\n4 9 3  | 6 2 1  | 5 7 8\n- - - - - - - - - - - - - \n8 5 7  | 9 4 3  | 2 6 1\n2 6 1  | 7 5 8  | 9 3 4\n9 3 4  | 1 6 2  | 7 8 5\n- - - - - - - - - - - - - \n5 7 8  | 3 9 4  | 6 1 2\n1 2 6  | 5 8 7  | 4 9 3\n3 4 9  | 2 1 6  | 8 5 7\n"
+      "7 8 5  | 4 3 9  | 1 2 6\n6 1 2  | 8 7 5  | 3 4 9\n4 9 3  | 6 2 1  | 5 7 8\n- - - - - - - - - - - - - \n8 5 7  | 9 4 3  | 2 6 1\n2 6 1  | 7 5 8  | 9 3 4\n9 3 4  | 1 6 2  | 7 8 5\n- - - - - - - - - - - - - \n5 7 8  | 3 9 4  | 6 1 2\n1 2 6  | 5 8 7  | 4 9 3\n3 4 9  | 2 1 6  | 8 5 7\n\n# # # # # # # # # # # # # # # #\nSolution:\n\n7 8 5  | 4 3 9  | 1 2 6\n6 1 2  | 8 7 5  | 3 4 9\n4 9 3  | 6 2 1  | 5 7 8\n- - - - - - - - - - - - - \n8 5 7  | 9 4 3  | 2 6 1\n2 6 1  | 7 5 8  | 9 3 4\n9 3 4  | 1 6 2  | 7 8 5\n- - - - - - - - - - - - - \n5 7 8  | 3 9 4  | 6 1 2\n1 2 6  | 5 8 7  | 4 9 3\n3 4 9  | 2 1 6  | 8 5 7\n"
      ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<function print>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
     }
    ],
    "source": [
