--- a/sudokuSOlver.ipynb
+++ b/sudokuSOlver.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -140,16 +140,6 @@
      "text": [
       "7 8 5  | 4 3 9  | 1 2 6\n6 1 2  | 8 7 5  | 3 4 9\n4 9 3  | 6 2 1  | 5 7 8\n- - - - - - - - - - - - - \n8 5 7  | 9 4 3  | 2 6 1\n2 6 1  | 7 5 8  | 9 3 4\n9 3 4  | 1 6 2  | 7 8 5\n- - - - - - - - - - - - - \n5 7 8  | 3 9 4  | 6 1 2\n1 2 6  | 5 8 7  | 4 9 3\n3 4 9  | 2 1 6  | 8 5 7\n\n# # # # # # # # # # # # # # # #\nSolution:\n\n7 8 5  | 4 3 9  | 1 2 6\n6 1 2  | 8 7 5  | 3 4 9\n4 9 3  | 6 2 1  | 5 7 8\n- - - - - - - - - - - - - \n8 5 7  | 9 4 3  | 2 6 1\n2 6 1  | 7 5 8  | 9 3 4\n9 3 4  | 1 6 2  | 7 8 5\n- - - - - - - - - - - - - \n5 7 8  | 3 9 4  | 6 1 2\n1 2 6  | 5 8 7  | 4 9 3\n3 4 9  | 2 1 6  | 8 5 7\n"
      ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<function print>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 13
     }
    ],
    "source": [
@@ -158,9 +148,7 @@
     "solve(board)\n",
     "\n",
     "print(\"\\n# # # # # # # # # # # # # # # #\\nSolution:\\n\")\n",
-    "print_board(board)\n",
-    "\n",
-    "print"
+    "print_board(board)"
    ]
   },
   {
